ch09/ch09-start/iac-macro-usage/tests/fails/bucket_typo.stderr
error: only 'bucket' and 'lambda' resources are supported
 --> tests/fails/bucket_typo.rs:5:7
  |
5 |       bucke uniquename
  |       ^^^^^
